--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
   <body>
     <div class="products">
       <h4>ATMIYA REGULAR TIME TABLE SPEAKER (Using AI)</h4>
-      <a href="clg_regular_schedule-20220413T131409Z-001.zip" download>Download File</a>
+       <a href="https://drive.google.com/drive/folders/113bI5oTUx4FHEJBkM09jrz2idjF0XPLo" download>Download File</a>
     </div>
 
     <div class="products">
