--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
   <body>
     <div class="products">
       <h4>ATMIYA REGULAR TIME TABLE SPEAKER (Using AI) -- </h4>
-       <a href="https://drive.google.com/drive/folders/113bI5oTUx4FHEJBkM09jrz2idjF0XPLo" download>Download File</a>
+       <a href="https://drive.google.com/drive/folders/113bI5oTUx4FHEJBkM09jrz2idjF0XPLo" download target="_blank>Download File</a>
     </div>
 
     <div class="products">
