--- a/index.html
+++ b/index.html
@@ -3,80 +3,86 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href='.\css\style.css'>
-  <title>HOME | TECHNOPHILE</title>
-  <link rel="stylesheet" href="css/about_style.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href='.\css\style.css'>
+    <title>HOME | TECHNOPHILE</title>
+    <link rel="stylesheet" href="css/about_style.css">
     <link rel="icon" href="Technophile_logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 
 <header>
-  <nav>
-    <div class="container teal borderYtoX">
-      <a aria-current="page" href="index.html">HOME</a>
-      <a aria-current="page" href="products.html">PRODUCTS</a>
-      <a aria-current="page" href="aboutus.html">ABOUT US</a>
-    </div>
-  </nav>
+    <nav>
+        <div class="container teal borderYtoX">
+            <a aria-current="page" href="index.html">HOME</a>
+            <a aria-current="page" href="products.html">PRODUCTS</a>
+            <a aria-current="page" href="aboutus.html">ABOUT US</a>
+        </div>
+    </nav>
 
 </header>
 
 <main>
-  <body>
-    <div class="top-container">
-  <h1>I'm Niramay Thaker</h1>
-  <h2><b>FOUNDER OF TECHNOPHILE<b></h2>
-  <p><b>|| MAKER || || LEARNER || || EXPLORER || || SOLVING PROBLEMS || || FOND OF INNOVATION ||<b></p>
-</div>
 
-<div class="middle-container">
-  <div class="profile"><br>
-    <h2>Hello.</h2>
-    <p>I am Niramay Thaker, Woking with <b>PYTHON TECHNOLOGY<b></p>
-    <p><b>"CONVERTING IDEAS INTO LINES OF CODE"<b></p>
-  </div>
-  <br><br><br>
-  <hr>
-  <br><br>
-  <div class="skills">
-    <h2>My Interest</h2>
-    <div class="skill-row">
-      <img class="python" src=".\images\python.png" alt="Python developer", height="350", width="550">
-      <h3>Python development</h3>
-      <p>Currently learning and trying to imporve my skills as much as possible, can work with back-end, troubleshooting. Also discovering more and more new skills and to learn it.</p>
-    </div>
-    <br>
-    <div class="skill-row">
-      <img class="ai" src=".\images\ai.png" alt="AI", height="350", width="550">
-      <h3>Artificial Intelligence</h3>
-      <p>I am quite passionate about learning AI and work on it with python. As it's very creative and innovative thing or topic to learn about and can be used in some many useful way to imporve and make life easy to live.</p>
-    </div>
-    <br><br>
-  </div>
+    <body>
+        <div class="top-container">
+            <h1>I'm Niramay Thaker</h1>
+            <h2><b>FOUNDER OF TECHNOPHILE<b></h2>
+            <p><b>|| MAKER || || LEARNER || || EXPLORER || || SOLVING PROBLEMS || || FOND OF INNOVATION ||<b></p>
+        </div>
 
-  <br><br>
-  <hr>
-  <br><br>
-  <div class="contact-me">
-    <br>
-    </div>
-  </div>
-  <br>
-  </body>
+        <div class="middle-container">
+            <div class="profile"><br>
+                <h2>Hello.</h2>
+                <p>I am Niramay Thaker, Woking with <b>PYTHON TECHNOLOGY<b></p>
+                <p><b>"CONVERTING IDEAS INTO LINES OF CODE"<b></p>
+            </div>
+            <br><br><br>
+            <hr>
+            <br><br>
+            <div class="skills">
+                <h2>My Interest</h2>
+                <div class="skill-row">
+                    <img class="python" src=".\images\python.png" alt="Python developer" , height="350" , width="550">
+                    <h3>Python development</h3>
+                    <p>Currently learning and trying to imporve my skills as much as possible, can work with back-end,
+                        troubleshooting. Also discovering more and more new skills and to learn it.</p>
+                </div>
+                <br>
+                <div class="skill-row">
+                    <img class="ai" src=".\images\ai.png" alt="AI" , height="350" , width="550">
+                    <h3>Artificial Intelligence</h3>
+                    <p>I am quite passionate about learning AI and work on it with python. As it's very creative and
+                        innovative thing or topic to learn about and can be used in some many useful way to imporve and
+                        make life easy to live.</p>
+                </div>
+                <br><br>
+            </div>
+
+            <br><br>
+            <hr>
+            <br><br>
+            <div class="contact-me">
+                <br>
+            </div>
+        </div>
+        <br>
+    </body>
 </main>
 
 <footer>
-  <div class="bottom-container">
+    <div class="bottom-container">
+        <h5>FOR PROJECT WORK CONTACT ON : asktechnophile@gmail.com</h5>
+        <a class="btn" href="https://github.com/NiramayThaker" target="_blank">Github</a>
+        <a class="btn" href="https://www.linkedin.com/in/niramay-thaker-8911271b4/" target="_blank">LinkedIn</a>
+        <a class="btn" href="https://twitter.com/NiramayThaker" target="_blank">Twitter</a>
+        <p style="color: #EAF6F6">© 2022 TECHNOPHILE.</p>
 
-    <a class="btn" href="https://github.com/NiramayThaker">Github</a>
-    <a class="btn" href="https://www.linkedin.com/in/niramay-thaker-8911271b4/">LinkedIn</a>
-    <a class="btn" href="https://twitter.com/NiramayThaker">Twitter</a>
-    <p style="color: #EAF6F6">© 2022 TECHNOPHILE.</p>
-
-  </div>
+    </div>
 </footer>
 
 </html>
