--- a/products.html
+++ b/products.html
@@ -3,74 +3,87 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href='.\css\style.css'>
-  <title>PRODUCTS | TECHNOPHILE</title>
-  <link rel="icon" href="Technophile_logo.jpg">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href='.\css\style.css'>
+    <title>PRODUCTS | TECHNOPHILE</title>
+    <link rel="icon" href="Technophile_logo.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <header>
-  <nav>
-    <div class="container teal borderYtoX">
-      <a aria-current="page" href="index.html">HOME</a>
-      <a aria-current="page" href="products.html">PRODUCTS</a>
-      <a aria-current="page" href="aboutus.html">ABOUT US</a>
-    </div>
-  </nav>
+    <nav>
+        <div class="container teal borderYtoX">
+            <a aria-current="page" href="index.html">HOME</a>
+            <a aria-current="page" href="products.html">PRODUCTS</a>
+            <a aria-current="page" href="aboutus.html">ABOUT US</a>
+        </div>
+    </nav>
+
 </header>
 
 <main>
-  <body>
-    <div class="products">
-      <h4>ATMIYA REGULAR TIME TABLE SPEAKER (Using AI) -- </h4>
-       <a href="https://drive.google.com/drive/folders/113bI5oTUx4FHEJBkM09jrz2idjF0XPLo" download target="_blank>Download File</a>
-    </div>
 
-    <div class="products">
-      <h4>PASSWORD ENCODER DECODER</h4>
-      <a href="https://github.com/NiramayThaker/Python_projects/tree/main/encoder_decoder" target="_blank" >VIEW</a>
-    </div>
+    <body>
+        <div class="products">
+            <h4>ATMIYA REGULAR TIME TABLE SPEAKER (Using AI)</h4>
+            <!-- <a href="clg_regular_schedule-20220413T131409Z-001.zip" download>Download File</a> -->
+            <a href="https://drive.google.com/drive/u/1/folders/1TJwYX1FfED1cbVex5R_0ho7sAwSLYNGr" download
+                target="_blank">Download File</a>
+        </div>
 
-    <div class="products">
-      <h4>PASSWORD MANAGER [with high quality GUI]</h4>
-      <a href="https://github.com/NiramayThaker/Python_projects/tree/main/password_manager_GUI" target="_blank" >VIEW</a>
-    </div>
+        <div class="products">
+            <h4>PASSWORD ENCODER DECODER</h4>
+            <a href="https://github.com/NiramayThaker/Python_projects/tree/main/encoder_decoder"
+                target="_blank">VIEW</a>
+        </div>
 
-    <div class="products">
-      <h4>AUTOMATED BIRTHDAY REMAINDER</h4>
-      <a href="https://github.com/NiramayThaker/Python_projects/tree/main/automated_birthday_remainder" target="_blank" >VIEW</a>
-    </div>
+        <div class="products">
+            <h4>PASSWORD MANAGER [with high quality GUI]</h4>
+            <a href="https://github.com/NiramayThaker/Python_projects/tree/main/password_manager_GUI"
+                target="_blank">VIEW</a>
+        </div>
 
-    <div class="products">
-      <h4>SUPER SECURE PASSWORD GENERATOR</h4>
-      <a href="https://github.com/NiramayThaker/Python_projects/tree/main/password_generator_python" target="_blank" >VIEW</a>
-    </div>
+        <div class="products">
+            <h4>AUTOMATED BIRTHDAY REMAINDER</h4>
+            <a href="https://github.com/NiramayThaker/Python_projects/tree/main/automated_birthday_remainder"
+                target="_blank">VIEW</a>
+        </div>
 
-    <div class="products">
-      <h4>MULTIPLAYER PING PONG GAME</h4>
-      <a href="https://github.com/NiramayThaker/Python_projects/tree/main/multiplayer_pong_game" target="_blank" >PLAY</a>
-    </div>
+        <div class="products">
+            <h4>SUPER SECURE PASSWORD GENERATOR</h4>
+            <a href="https://github.com/NiramayThaker/Python_projects/tree/main/password_generator_python"
+                target="_blank">VIEW</a>
+        </div>
 
-    <div class="products">
-      <h4>BLACK JACK GAME</h4>
-      <a href="https://github.com/NiramayThaker/Python_projects/tree/main/black_jack_game" target="_blank" >PLAY</a>
-    </div>
-  </body>
+        <div class="products">
+            <h4>MULTIPLAYER PING PONG GAME</h4>
+            <a href="https://github.com/NiramayThaker/Python_projects/tree/main/multiplayer_pong_game"
+                target="_blank">PLAY</a>
+        </div>
+
+        <div class="products">
+            <h4>BLACK JACK GAME</h4>
+            <a href="https://github.com/NiramayThaker/Python_projects/tree/main/black_jack_game"
+                target="_blank">PLAY</a>
+        </div>
+    </body>
 
 </main>
 
 <footer>
-  <div class="bottom-container">
-    <a class="btn" href="https://github.com/NiramayThaker">Github</a>
-    <a class="btn" href="https://www.linkedin.com/in/niramay-thaker-8911271b4/">LinkedIn</a>
-    <a class="btn" href="https://twitter.com/NiramayThaker">Twitter</a>
-    <p style="color: #EAF6F6">© 2022 TECHNOPHILE.</p>
+    <div class="bottom-container">
+        <h5>FOR PROJECT WORK CONTACT ON : asktechnophile@gmail.com</h5>
+        <a class="btn" href="https://github.com/NiramayThaker" target="_blank">Github</a>
+        <a class="btn" href="https://www.linkedin.com/in/niramay-thaker-8911271b4/" target="_blank">LinkedIn</a>
+        <a class="btn" href="https://twitter.com/NiramayThaker" target="_blank">Twitter</a>
+        <p style="color: #EAF6F6">© 2022 TECHNOPHILE.</p>
 
-  </div>
+    </div>
 </footer>
 
 </html>
