--- a/aboutus.html
+++ b/aboutus.html
@@ -3,42 +3,46 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href='.\css\style.css'>
-  <title>ABOUT US | TECHNOPHILE</title>
-  <link rel="icon" href="Technophile_logo.jpg">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href='.\css\style.css'>
+    <title>ABOUT US | TECHNOPHILE</title>
+    <link rel="icon" href="Technophile_logo.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <header>
-  <nav>
-    <div class="container teal borderYtoX">
-      <a aria-current="page" href="index.html">HOME</a>
-      <a aria-current="page" href="products.html">PRODUCTS</a>
-      <a aria-current="page" href="aboutus.html">ABOUT US</a>
-    </div>
-  </nav>
+    <nav>
+        <div class="container teal borderYtoX">
+            <a aria-current="page" href="index.html">HOME</a>
+            <a aria-current="page" href="products.html">PRODUCTS</a>
+            <a aria-current="page" href="aboutus.html">ABOUT US</a>
+        </div>
+    </nav>
 
 </header>
 
 <main>
-  <body>
-    <img class="working" src=".\images\Under-Construction-Anime.jpg" alt="AI", height="350", width="550">
-  </body>
+
+    <body>
+        <img class="working" src=".\images\Under-Construction-Anime.jpg" alt="AI" , height="350" , width="550">
+    </body>
 </main>
 
 <footer>
-  <div class="bottom-container">
+    <div class="bottom-container">
 
-    <a class="btn" href="https://github.com/NiramayThaker">Github</a>
-    <a class="btn" href="https://www.linkedin.com/in/niramay-thaker-8911271b4/">LinkedIn</a>
-    <a class="btn" href="https://twitter.com/NiramayThaker">Twitter</a>
-    <p style="color: #EAF6F6">© 2022 TECHNOPHILE.</p>
+        <h5>FOR PROJECT WORK CONTACT ON : asktechnophile@gmail.com</h5>
+        <a class="btn" href="https://github.com/NiramayThaker" target="_blank">Github</a>
+        <a class="btn" href="https://www.linkedin.com/in/niramay-thaker-8911271b4/" target="_blank">LinkedIn</a>
+        <a class="btn" href="https://twitter.com/NiramayThaker" target="_blank">Twitter</a>
+        <p style="color: #EAF6F6">© 2022 TECHNOPHILE.</p>
 
-  </div>
+    </div>
 </footer>
 
 </html>
